# ssh-manager-rust

./: .gitignore  README.md  bun.lockb  eslint.config.js  package.json  prettier.config.js  svelte.config.js  vite.config.js
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  session.rs  sled.rs  ssh.rs  utils.rs
src/lib/components/: index.ts
src/lib/components/barChartLogger/: index.svelte
src/lib/components/common/: Dialog.svelte
src/lib/components/connectionDetails/: NetworkSpeedChart.svelte
src/lib/components/connectionList/: ConnectionItem.svelte  ConnectionListBottom.svelte  index.svelte
src/lib/components/leftNav/: SiderNavItem.svelte
src/lib/components/titleBar/: index.svelte  tabMenuItem.svelte
src/lib/store/: connectionStore.ts
src/lib/utils/: formatBytes.ts  index.ts  invoke.ts  is.ts
src/routes/: +layout.svelte
src/routes/(home)/: +layout.svelte  +layout.ts  +page.svelte
src/routes/connections/: +layout.svelte
src/routes/connections/[id]/: +page.svelte  +page.ts
src/routes/connections/all/: +page.svelte
src/routes/logger/: +page.svelte  +page.ts
src/tests/: ConnectForm.test.ts
src/types/: index.d.ts
